@@ -38,6 +38,7 @@ export(abbreviateTimeLabels,
        argoGrid,
        as.adp,
        as.argo,
+       as.cm,
        as.coastline,
        as.ctd,
        as.echosounder,
