@@ -5,8 +5,9 @@
 \alias{cm-class}
 \title{Class to Store Current Meter (CM) Data}
 \description{
-Class to store current meter data from an interocean S4 device.  A file
-containing CM profile data may be read with \code{\link{read.cm}}. The results
+Class to store current meter data, e.g. from an Interocean S4 device
+or an Aanderaa RCM device.  A file
+containing Interocean S4 data may be read with \code{\link{read.cm}}. The results
 may be plotted with \code{\link{plot,cm-method}} or summarized with
 \code{\link{summary,cm-method}}.  Data may be retrieved with
 \code{\link{[[,cm-method}} or replaced with \ \code{\link{[[<-,cm-method}}.
@@ -28,9 +29,9 @@ Other classes provided by \code{oce}: \code{\link{adp-class}},
   \code{\link{windrose-class}}
 
 Other things related to \code{cm} data: \code{\link{[[,cm-method}},
-  \code{\link{[[<-,cm-method}}, \code{\link{cm}},
-  \code{\link{plot,cm-method}}, \code{\link{read.cm}},
-  \code{\link{subset,cm-method}},
+  \code{\link{[[<-,cm-method}}, \code{\link{as.cm}},
+  \code{\link{cm}}, \code{\link{plot,cm-method}},
+  \code{\link{read.cm}}, \code{\link{subset,cm-method}},
   \code{\link{summary,cm-method}}
 }
 
