@@ -33,8 +33,9 @@ Dan Kelley
 }
 \seealso{
 Other things related to \code{cm} data: \code{\link{[[,cm-method}},
-  \code{\link{[[<-,cm-method}}, \code{\link{cm-class}},
-  \code{\link{cm}}, \code{\link{plot,cm-method}},
-  \code{\link{read.cm}}, \code{\link{summary,cm-method}}
+  \code{\link{[[<-,cm-method}}, \code{\link{as.cm}},
+  \code{\link{cm-class}}, \code{\link{cm}},
+  \code{\link{plot,cm-method}}, \code{\link{read.cm}},
+  \code{\link{summary,cm-method}}
 }
 
