@@ -24,8 +24,9 @@ The documentation for \code{\link{cm-class}} explains the structure
 of \code{cm} objects, and also outlines the other functions dealing with them.
 
 Other things related to \code{cm} data: \code{\link{[[,cm-method}},
-  \code{\link{[[<-,cm-method}}, \code{\link{cm-class}},
-  \code{\link{cm}}, \code{\link{plot,cm-method}},
-  \code{\link{read.cm}}, \code{\link{subset,cm-method}}
+  \code{\link{[[<-,cm-method}}, \code{\link{as.cm}},
+  \code{\link{cm-class}}, \code{\link{cm}},
+  \code{\link{plot,cm-method}}, \code{\link{read.cm}},
+  \code{\link{subset,cm-method}}
 }
 
